[gd_scene load_steps=4 format=3 uid="uid://main"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/Player.tscn" id="2"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
color = Color(0, 0.05, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Walls" type="Node2D" parent="."]
[node name="WallTop" type="StaticBody2D" parent="Walls"]
position = Vector2(400, 0)
[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallTop"]
shape = RectangleShape2D.new()
shape.size = Vector2(800, 20)

[node name="WallBottom" type="StaticBody2D" parent="Walls"]
position = Vector2(400, 600)
[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls/WallBottom"]
shape = RectangleShape2D.new()
shape.size = Vector2(800, 20)

[node name="WallLeft" type="StaticBody2D" parent="Walls"]
position = Vector2(0, 300)
[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls/WallLeft"]
shape = RectangleShape2D.new()
shape.size = Vector2(20, 600)

[node name="WallRight" type="StaticBody2D" parent="Walls"]
position = Vector2(800, 300)
[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls/WallRight"]
shape = RectangleShape2D.new()
shape.size = Vector2(20, 600)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(400, 300)
scene_file = ExtResource("2")

[node name="UI" type="CanvasLayer" parent="."]
[node name="ScoreLabel" type="Label" parent="UI"]
text = "SCORE: 000000"
theme_override_fonts/font = load("res://assets/font.tres")
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0, 1, 0, 1)
position = Vector2(20, 20)

[node name="GameOverLabel" type="Label" parent="UI"]
text = "GAME OVER"
theme_override_fonts/font = load("res://assets/font.tres")
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(1, 0, 0, 1)
position = Vector2(250, 250)
visible = false

[node name="RestartButton" type="Button" parent="UI"]
text = "RESTART"
position = Vector2(300, 320)
visible = false

[node name="MainMenuButton" type="Button" parent="UI"]
text = "MAIN MENU"
position = Vector2(300, 380)
visible = false